v1.0.2rc3	 Thursday, April 14 2011
 Changes
 +Fixed Status Icon missing on execute Action.
 +Fixed Capture Hyperlinks only
 +Added Ingore Whitespace only
 +Added Trim Whitespace
 +Added Trim Newlines
 
v1.0.2rc2	 Tuesday, April 05 2011
 Changes
 +Fixed E, Alt-E (edit clipboard) not working bug.
 
v1.0.2rc1	 Thursday, March 24 2011
 Changes
 +Move configure.in to configure.ac, fix so just links with gtk+
 +Removed files autogenerated by automake tools.
 +Added auto-insert svn version for svn builds.
 +Changed item_length to go down to 5 and up to 100.
 +Changed Hot Keys so they activate on keypress.
 +Added Ctrl,Shift-delete functionality.
 +Added debian package build script.
 
v1.0.1 Thursday, March 9 2011
  Changes
 +Fixed build so dist-clean does not remove icons.
 +Added wrapper p_strcmp so it builds with Gtk <2.16

v1.0.0 Wednesday, March 2 2011
  Changes
  +Created new icon 'parcellite' and added it to install.
  +Moved newline to after elipsizing (thanks, Christian).
  +Added right-click delete.
  +Added history location
  +Added search as you type.
  +Added Data Size limt.

v0.9.3  Monday, December 20 2010
  Changes
  +Fixed 100% CPU bug that occurs with certain clipboard data.
  +Fixed list not staying at the top of the list.
  +Added patch that corrects clipboard losing text data when app closes.
  +Added more man page information.
  
v0.9.2  Friday, January 01 2010

  New
  + Danish translation (by Kim Jensen).
  + Czech translation (by Miloš Koutný).
  + French translation (by Vincent Coiffier).
  + Romanian translation (by Ovidiu D. Niţan).

  Changes
  + Modified action execution code.
  + Removed dependency on pthreads.
  + Clear option clears clipboard and primary contents.
  + Use accessor functions instead direct access (by Javier Jardon).
  + Add missing include statements to silence gcc warnings (by Ludwig Nussel).
  + Clipboard sync cannot be enabled unless both copy and primary are enabled.